third_party/move/move-compiler/tests/move_check/v2_tests/bytecode-generator/wildcard1.exp
error[E04005]: expected a single type
  ┌─ tests/move_check/v2_tests/bytecode-generator/wildcard1.move:7:13
  │
2 │     fun tup(): (u64, u64) {
  │                ---------- Expected a single type, but found expression list type: '(u64, u64)'
  ·
7 │         let _ = tup();
  │             ^ Invalid type for local

